# RoomParser

./: .flake8  .gitattributes  .gitignore  GitHub.md  PROJECT_BRIEF_building_room_extractor.md  README.md  config.yaml  dedupe_dxf_lines.py  dxf_preparation.py  dxf_self_clean_experiment.py  infer_dxf_rules.py  logging_config.py  main.py  pyproject.toml  requirements.txt  room_extraction.py  room_recognition_experiment.py  validate_json_html.py
auditable-incremental-problem-solving-skill/: SKILL.md
docs/: dxf_cleaning_work_summary.md  dxf_self_cleaning_plan.md  project_progress.md  room_space_recognition_rules_summary.md  session_handoff_2026-06-14.md
dxf-data-cleaning-skill/: SKILL.md
experiments/: dxf_self_clean_experiment.py  room_recognition_experiment.py
src/room_extractor/: __init__.py
src/room_extractor/ai/: __init__.py  local_ai_client.py  room_image_checker.py
src/room_extractor/cad/: __init__.py  axis_extractor.py  axis_rule_inferer.py  block_extractor.py  cad_raw_extractor.py  column_extractor.py  column_feature_analyzer.py  dwg_converter.py  dxf_line_deduper.py  dxf_loader.py  dxf_self_cleaner.py  entity_filter.py  (+3 more)
tests/: test_cad_parser.py  test_cli.py  test_dedupe_dxf_lines.py  test_dwg_converter.py  test_geometry.py  test_infer_dxf_rules.py  test_pdf_checker.py  test_recognized_rooms_html_exporter.py  test_review_map_exporter.py  test_review_task_builder.py  test_review_task_html_exporter.py  test_room_boundary_detector.py  test_room_image_checker.py  test_room_json_builder.py  test_room_text_parser.py  test_validate_json_html.py
(+46 files in other folders)
